--- a/index.html
+++ b/index.html
@@ -12,11 +12,37 @@
   <li><a href="2.html">lemonbalm</a></li>
   <li><a href="3.html">helleborus</a></li>
   <li><a href="4.html">tulip</a></li>
+  <li><a href="5.html">Livingw with Plants</a></li>
   <li><a href="https://www.instagram.com/treebyina/" target="_blank" title="instagram @treebyina">contact @instagram</a></li>
 </ol>
 
 <p style="margin-top:30px;">Hey, mates!</p>
 I am studying HTML language currently, this page is for both study and to share my interests-mostly plants!!<BR>
 It'll be improved gradually, Please enjoy my growth as time passes =)<br>
-sketched by ina, 11 jan 2019</body>
+sketched by ina, 11 jan 2019<br>
+<br>
+you're welcome to leave your comments on below!<br>
+<p>
+  <div id="disqus_thread"></div>
+  <script>
+
+  /**
+  *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+  *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
+  /*
+  var disqus_config = function () {
+  this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+  this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+  };
+  */
+  (function() { // DON'T EDIT BELOW THIS LINE
+  var d = document, s = d.createElement('script');
+  s.src = 'https://seoulgardner.disqus.com/embed.js';
+  s.setAttribute('data-timestamp', +new Date());
+  (d.head || d.body).appendChild(s);
+  })();
+  </script>
+  <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+</p>
+</body>
 </html>
