--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@ I am studying HTML language currently, this page is for both study and to share 
 It'll be improved gradually, Please enjoy my growth as time passes =)<br>
 sketched by ina, 11 jan 2019<br>
 <br>
-you're welcome to leave your comments on below!<br>
+you're welcome to leave comments on each pages!<br>
+
 <p>
   <div id="disqus_thread"></div>
   <script>
@@ -44,5 +45,6 @@ you're welcome to leave your comments on below!<br>
   </script>
   <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
 </p>
+
 </body>
 </html>
